
  - fix to opacity on selected text

  - there is now a text cursor that you can move back and forth with the arrow keys. Everything seems to be working pretty well with it but there are probably bugs, please let me know.

  - slight change to vertical tab style

  - fixed an issue with text nudging on certain text elements


V1.05
  - various multi-line text fixes

  - You can now drag callout arrows/lines around the graph

  - various callout fixes

  - fix for floating keys being immobile after load


V1.0 - First Public Release
  - server-side saving and loading!

  - various fixes for multi-line text

  - bug fixes for notes, sources, and no-logo layouts


V0.7
  - UI re-design makes the UI a bit less awful.

  - re-sized logo

  - No logo layout enabled

  - Settings tab enabled. You can do all sorts of crazy things here if you want to be hardcore.

  - line charts with >8 groups will now connect properly

  - Top keys work again and are now positioned in a more aesthetically pleasing way

  - I *think* I finally fixed the last of the trendline bugs but please check your trendlines carefully to make sure they are what they're supposed to be.

  - you can now 'label data' a path just like you can points and bars. The label is *always* the group the line belongs to (the label variable field is ignored) and it appears at the right endpoint of the line.

  - using 'label data' with horizontal bars now makes a lot more sense.

  - when you mouse over a data element now, that element's label will appear on screen while you hover the object - useful for finding a particular line or whatever that you want to apply a permanent label too.

  - When you are editing text you can now press return and get a carriage return. This is great for long annotations. I haven't done a ton of testing of this feature so I'd be curious to know if it behaves strangely in certain situations.
